--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,115 +3,222 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    .
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <title>$Title$</title>
 
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
+    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!--[if lt IE 9]>
+    <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+    <![endif]-->
+    <style type="text/css">
+        @media (min-width: 780px) {
+            #menu_left {
+                width: 250px;
+                margin-top: 51px;
+                position: absolute;
+                z-index: 1;
+                height: 600px;
+            }
 
+            .search-bar {
+                margin-top: 10px;
+                margin-bottom: 10px;
+            }
+
+            .page_main {
+                margin-top: 0;
+                margin-left: 255px;
+            }
+
+            .mybreadcrmb {
+                margin-top: 0;
+            }
+        }
+    </style>
 </head>
 <body>
-<!--<div class="container">-->
-    <div class="row clearfix">
-        <div class="col-md-3 column">
-        </div>
-        <div class="col-md-9 column">
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th>
-                        编号
-                    </th>
-                    <th>
-                        产品
-                    </th>
-                    <th>
-                        交付时间
-                    </th>
-                    <th>
-                        状态
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>
-                        1
-                    </td>
-                    <td>
-                        TB - Monthly
-                    </td>
-                    <td>
-                        01/04/2012
-                    </td>
-                    <td>
-                        Default
-                    </td>
-                </tr>
-                <tr class="success">
-                    <td>
-                        1
-                    </td>
-                    <td>
-                        TB - Monthly
-                    </td>
-                    <td>
-                        01/04/2012
-                    </td>
-                    <td>
-                        Approved
-                    </td>
-                </tr>
-                <tr class="error">
-                    <td>
-                        2
-                    </td>
-                    <td>
-                        TB - Monthly
-                    </td>
-                    <td>
-                        02/04/2012
-                    </td>
-                    <td>
-                        Declined
-                    </td>
-                </tr>
-                <tr class="warning">
-                    <td>
-                        3
-                    </td>
-                    <td>
-                        TB - Monthly
-                    </td>
-                    <td>
-                        03/04/2012
-                    </td>
-                    <td>
-                        Pending
-                    </td>
-                </tr>
-                <tr class="info">
-                    <td>
-                        4
-                    </td>
-                    <td>
-                        TB - Monthly
-                    </td>
-                    <td>
-                        04/04/2012
-                    </td>
-                    <td>
-                        Call in to confirm
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+<!--导航-->
+<nav class="navbar navbar-default  navbar-static-top">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu_left"
+                aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a href="#" class="navbar-brand">大港油田西区老人家庭养护管理系统</a>
     </div>
-<!--</div>-->
+    <ul class="nav navbar-nav navbar-right" style="margin-right: 30px">
+        <li><a href="#"><span class="badge" style="background-color: red">223</span></a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-off">&nbsp;注销</span></a></li>
+    </ul>
+
+    <!--侧边栏-->
+    <!--媒体导入 解决大屏幕样式全屏问题-->
+    <div class="navbar-default navbar-collapse" id="menu_left">
+        <ul class="nav">
+            <li>
+                <!--搜索-->
+                <div class="input-group search-bar">
+                    <input type="text" class="form-control">
+                    <!--一行-->
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button></span>
+
+                </div>
+            </li>
+            <li>
+                <a href="#" data-toggle="collapse"  data-target="#sub1"  >系统功能<span
+                        class="glyphicon glyphicon-chevron-right pull-right" ></span></a>
+                <ul id="sub1" class="nav collapse">
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;系统信息</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-user"></span>&nbsp;管理员管理</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;日志管理</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-off"></span>&nbsp;退出</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#sub2" data-toggle="collapse" >栏目功能<span
+                        class="glyphicon glyphicon-chevron-right pull-right"></span></a>
+                <ul id="sub2" class="nav collapse">
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;系统信息</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-user"></span>&nbsp;管理员管理</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;日志管理</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-off"></span>&nbsp;退出</a>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#sub3" data-toggle="collapse" >栏目功能<span
+                        class="glyphicon glyphicon-chevron-right pull-right"></span></a>
+                <ul id="sub3" class="nav collapse">
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;系统信息</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-user"></span>&nbsp;管理员管理</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-list-alt"></span>&nbsp;日志管理</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-off"></span>&nbsp;退出</a>
+                    </li>
+                </ul>
+            </li>
+
+        </ul>
+
+    </div>
+</nav>
+<!--右侧内容-->
+<div class="page_main">
+
+    <!--导航-->
+    <ol class="breadcrumb mybreadcrmb">
+        <li><a href="#">主页</a></li>
+        <li><a href="#">Library</a></li>
+        <li class="active">Data</li>
+    </ol>
+
+    <div class="row">
+        <div class="col-md-6 col-lg-11">
+            <div class="panel panel-default">
+                <!-- Default panel contents -->
+                <div class="panel-heading">服务信息</div>
+                <div class="panel-body">
+                    <!--Table-->
+                    <table class="table table-striped table-hover table-bordered text-center">
+                        <thead>
+                        <tr class="text-primary">
+                            <td><STRONG>服务名称</STRONG></td>
+                            <td><STRONG> 服务类型</STRONG></td>
+                            <td><STRONG>预约服务</STRONG></td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>保洁</td>
+                            <td>家政</td>
+                            <td><a href="#">预约</a></td>
+                        </tr>
+                        <tr>
+                            <td>修理</td>
+                            <td>家政</td>
+                            <td><a href="#">预约</a></td>
+                        </tr>
+                        <tr>
+                            <td>打针</td>
+                            <td>医疗</td>
+                            <td><a href="#">预约</a></td>
+                        </tr>
+                        <tr>
+                            <td>发件</td>
+                            <td>家政</td>
+                            <td><a href="#">预约</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <!--分页-->
+                    <nav aria-label="Page navigation text-center" class="text-center" >
+                    <nav aria-label="Page navigation text-center" class="text-center" >
+                        <ul class="pagination">
+                            <li>
+                                <a href="#" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li>
+                                <a href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+</div>
+
+</div>
+
+
+<script src="../static/js/jquery.min.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
 </body>
 </html>
