--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!--[if lt IE 9]>
@@ -40,6 +39,7 @@
             }
         }
     </style>
+
 
 
 </head>
@@ -219,17 +219,37 @@
 </div>
 
 </div>
+<script src="../static/js/jquery.js" th:src="@{/js/jquery.js}"></script>
+<script src="../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 
 
-<script src="../static/js/bootstrap.min.js"></script>
-<script src="../static/js/jquery-2.2.4.min.js"></script>
 
 
-<script type="text/javascript">
+<script  th:inline="javascript" type="text/javascript">
 $().ready(function () {
-    bootstrap
+    // alert(${model.info});
+    //var a = ${model.info};
+    // alert("ssss");
+    // console.log(${ServerModel.info});
+    //console.write(ServerModel);
 
+    var menuarray = [[${MenuModel.menuinfo}]];
+
+    // $.grep(menuarray)
+
+    console.log([[${MenuModel.menuinfo}]]);
+
+   $.each(menuarray,function (i,n) {
+       //console.log("111111111");
+       console.log("索引"+i+"内容"+n);
+      // console.log(i);
+   });
+
+    $.each( [0,1,2], function(i, n){
+        console.log( "Item #" + i + ": " + n );
+    });
 });
+
 </script>
 </body>
 </html>
