--- a/src/main/resources/static/views/main.html
+++ b/src/main/resources/static/views/main.html
@@ -122,8 +122,8 @@
 
 <script src="../js/iniPageInfo/iniPageInfo/iniPage.js" th:src="@{/js/iniPageInfo/iniPage.js}"></script>
 <script src="../js/angular1.7.min.js" th:src="@{/js/angular1.7.min.js}"></script>
-<!--<script src="../js/ionic.bundle.js" th:src="@{/js/ionic.bundle.js}"></script>-->
 <script src="../js/angular-route1.7.min.js" th:src="@{/js/angular-route1.7.min.js}"></script>
+<script src="../js/ui-bootstrap-tpls.js" th:src="@{/js/ui-bootstrap-tpls.js}"></script>
 
 <script src="../js/angularController/routeConfigure.js" th:src="@{/js/angularController/routeConfigure.js}"></script>
 <script type="text/javascript" th:inline="javascript">
