--- a/src/main/resources/static/views/ds1.html
+++ b/src/main/resources/static/views/ds1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/bootstrap.min.css" >
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!--<script src="../js/angular.min.js"></script>-->
     <script src="../js/angular1.7.min.js"></script>
     <!--<script src="../js/ui-bootstrap-tpls.js"></script>-->
@@ -18,7 +18,6 @@
     <!--<script src="../js/angular-animate.min.js"></script>-->
     <!--<script src="../js/angular-touch.min.js"></script>-->
     <!--<script src="../js/ui-bootstrap-tpls.js"></script>-->
-
 
 
 </head>
@@ -50,41 +49,37 @@
     //         $scope.myVar = !$scope.myVar;
     //     }
     // });
-    var ModalDemo = angular.module('ModalDemo',['ui.bootstrap']);
-    ModalDemo.controller('ModalDemoCtrl',['$scope','$log','$modal',function ($scope,$log,$uibModal ) {
+    var ModalDemo = angular.module('ModalDemo', ['ui.bootstrap']);
+    ModalDemo.controller('ModalDemoCtrl', ['$scope', '$log', '$modal', function ($scope, $log, $uibModal) {
         $scope.$on('$viewContentLoaded', function () {
             console.log('页面加载完成 serveInfoController');
         });
         console.log('页面加载完成 serveInfoController');
-        $scope.items = [ 'item1', 'item2', 'item3' ];
+        $scope.items = ['item1', 'item2', 'item3'];
         // $scope.test='sss';
         // $scope.clicks=(function () {
         //     alert('kkk');
         // });
-        $scope.open = function() {
+        $scope.open = function () {
             console.log('ssssssss');
             var modalInstance = $uibModal.open({
-                templateUrl : '../views/addInfo/addServeInfo.html',
-                controller : ModalInstanceCtrl,
-                size:'lg',
-                backdrop:'true',
-                windowClass:{
-
-
-
-                },
-                resolve : {
-                    items : function() {
+                templateUrl: '../views/addInfo/addServeInfo.html',
+                controller: ModalInstanceCtrl,
+                size: 'lg',
+                backdrop: 'true',
+                // windowClass: {},
+                resolve: {
+                    items: function () {
                         return $scope.items;
                     }
                 }
             });
-            modalInstance.opened.then(function() {// 模态窗口打开之后执行的函数
+            modalInstance.opened.then(function () {// 模态窗口打开之后执行的函数
                 console.log('modal is opened');
             });
-            modalInstance.result.then(function(result) {
+            modalInstance.result.then(function (result) {
                 console.log(result);
-            }, function(reason) {
+            }, function (reason) {
                 console.log(reason);// 点击空白区域，总会输出backdrop
                 // click，点击取消，则会暑促cancel
                 $log.info('Modal dismissed at: ' + new Date());
@@ -94,17 +89,17 @@
         }
 
 
-        }]);
+    }]);
 
-    var ModalInstanceCtrl = function($scope, $modalInstance, items) {
+    var ModalInstanceCtrl = function ($scope, $modalInstance, items) {
         $scope.items = items;
         $scope.selected = {
-            item : $scope.items[0]
+            item: $scope.items[0]
         };
-        $scope.ok = function() {
+        $scope.ok = function () {
             $modalInstance.close($scope.selected);////关闭并返回当前选项
         };
-        $scope.cancel = function() {
+        $scope.cancel = function () {
             console.log("取消");
             $modalInstance.dismiss('cancel');
         };
