--- a/src/main/resources/static/views/reg/regVillageAdminStaff.html
+++ b/src/main/resources/static/views/reg/regVillageAdminStaff.html
@@ -3,9 +3,9 @@
     <div class="col-md-6 col-lg-11">
         <div class="panel panel-default">
             <!-- Default panel contents -->
-            <div class="panel-heading">小区员工信息</div>
+            <div class="panel-heading">小区管理员信息</div>
             <div class="panel-body">
-                <button  class="btn btn-success " style="margin-bottom: 10px"  ng-click="addVillageStaff()">新增</button>
+                <button  class="btn btn-success " style="margin-bottom: 10px"  ng-click="addVillageAdminStaff()">新增</button>
                 <table class="table table-striped table-hover table-bordered text-center">
                     <tr>
                         <td>编号</td>
@@ -14,14 +14,14 @@
                         <td>性别</td>
                         <td>编辑</td>
                     </tr>
-                    <tr ng-repeat="village in villageStaffList">
+                    <tr ng-repeat="village in villageAdminStaffList">
                         <td  class="text " ng-model="village.id" ng-bind="$index+1"></td>
-                        <td ng-model="village.staffName">{{village.staffName}}</td>
+                        <td ng-model="village.adminstaffName">{{village.adminstaffName}}</td>
                         <td ng-model="village.loginName">{{village.loginName}}</td>
                         <td ng-model="village.gender">{{village.gender}}</td>
                         <td>
-                            <button  class="btn btn-success"  ng-click="editVillageStaff(village)">编辑</button>
-                            <button  class="btn  btn-danger" ng-click="deleteVillageStaff(village.id)" >删除</button>
+                            <button  class="btn btn-success"  ng-click="editVillageAdminStaff(village)">编辑</button>
+                            <button  class="btn  btn-danger" ng-click="deleteVillageAdminStaff(village.id)" >删除</button>
                         </td>
                     </tr>
                 </table>
