--- a/src/main/resources/static/views/main.html
+++ b/src/main/resources/static/views/main.html
@@ -105,7 +105,7 @@
     <!--导航-->
     <ol class="breadcrumb mybreadcrmb">
         <li><a href="javascirpt:0">主页</a></li>
-        <li><a href="#">Library</a></li>
+        <li><a href="#!/servInfo">Library</a></li>
         <li class="active">Data</li>
     </ol>
 
