--- a/src/main/resources/static/views/addInfo/addServeInfo.html
+++ b/src/main/resources/static/views/addInfo/addServeInfo.html
@@ -1,10 +1,10 @@
 <div class="row">
-    <div class="col-md-6 col-lg-11">
+    <div class="col-lg-12">
     <div class="panel panel-default">
         <!-- Default panel contents -->
         <div class="panel-heading">服务信息</div>
         <div class="panel-body">
-            <table class="table">
+            <table class="table table-striped table-hover table-bordered text-center">
                 <tr>
                     <td><input class="text text-primary" ng-model="serveAddInfo" placeholder="请输入服务信息" required></td>
                 </tr>
