--- a/src/main/resources/static/views/addInfo/addVillagestaff.html
+++ b/src/main/resources/static/views/addInfo/addVillagestaff.html
@@ -1,10 +1,10 @@
 <div class="row">
-    <div class="col-md-5 col-lg-5">
+    <div class="col-lg-12">
     <div class="panel panel-default">
         <!-- Default panel contents -->
         <div class="panel-heading">管理员信息</div>
         <div class="panel-body">
-            <table class="table">
+            <table class="table table-striped table-hover table-bordered text-center">
                 <tr>
                     <td>姓名：<input class="text text-primary" ng-model="addVillageStaffInfo.staffName" placeholder="请输入姓名" required></td>
                 </tr>
