--- a/src/main/resources/static/views/main.html
+++ b/src/main/resources/static/views/main.html
@@ -62,7 +62,7 @@
         <li>
 
         </li>
-        <li><a href="#"><span class="glyphicon glyphicon-off">&nbsp;注销</span></a></li>
+        <li><a href="/logout"><span class="glyphicon glyphicon-off">&nbsp;注销</span></a></li>
     </ul>
     <!--侧边栏-->
     <!--媒体导入 解决大屏幕样式全屏问题-->
