--- a/src/main/resources/static/css/login/mylogin.css
+++ b/src/main/resources/static/css/login/mylogin.css
@@ -3,7 +3,8 @@
 }
 .form-horizontal{
     background: #FFFFFF;
-    margin-top: 200px;
+    /*margin-top: 200px;*/
+    margin: auto;
     padding-bottom: 40px;
     border-radius: 15px;
     text-align: center;
@@ -12,6 +13,12 @@
     -webkit-box-shadow: 0px 0px 20px 3px #333333;
     -moz-box-shadow: 0px 0px 20px 3px #333333;
     box-shadow: 0px 0px 20px 3px #333333;
+
+    float: none;
+
+    display: inline-block;
+
+    vertical-align: middle;
 }
 .form-horizontal .heading{
     display: block;
