--- a/src/main/resources/static/views/mainInfoPages/MyServeInfo.html
+++ b/src/main/resources/static/views/mainInfoPages/MyServeInfo.html
@@ -2,17 +2,25 @@
     <div class="col-md-6 col-lg-11">
         <div class="panel panel-default">
             <!-- Default panel contents -->
-            <div class="panel-heading">服务评分</div>
+            <div class="panel-heading">我的预定服务信息</div>
             <div class="panel-body">
+                <!--搜索-->
+                <div class="input-group search-bar">
+                    <input type="text" class="form-control form_datetime"ng-model="startTime" placeholder="请选择预约日期" readonly>
+                    <!--一行-->
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default"  ng-click="getMyServeInfoByStartTime()">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button></span>
+
+                </div>
                 <!--Table-->
-                <!--<button  class="btn btn-success " style="margin-bottom: 10px"  ng-click="addServeInfo()">新增</button>-->
                 <table class="table table-striped table-hover table-bordered text-center">
                     <thead>
                     <tr class="text-primary">
                         <td><STRONG>编号</STRONG></td>
                         <td><STRONG> 服务名称</STRONG></td>
                         <td><STRONG>预约时间</STRONG></td>
-                        <td><STRONG>评分</STRONG></td>
                     </tr>
                     </thead>
                     <tbody>
@@ -20,10 +28,6 @@
                         <td  class="text " ng-model="serveInfo.id" ng-bind="$index+1"></td>
                         <td ng-model="serveInfo.serverItemInfo">{{serveInfo.serverItemInfo}}</td>
                         <td ng-model="serveInfo.orderdateTime">{{serveInfo.orderdateTime}}</td>
-                        <td>
-                            <button  class="btn  btn-danger" ng-if="serveInfo.grade!=0" disabled>已评分</button>
-                            <button  class="btn  btn-danger" ng-click="gradeServeInfo(serveInfo)"  ng-if="serveInfo.grade==0 ">评分</button>
-                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -56,4 +60,14 @@
 
 </div>
 
+<script>
+
+    $(".form_datetime").datepicker({
+        format: "yyyy-mm-dd", //显示日期格式
+        autoclose: true,
+        minView: "month",//只选择到天自动关闭
+        language: 'zh-CN',
+    });
+
+</script>
 
