--- a/src/main/resources/static/views/login.html
+++ b/src/main/resources/static/views/login.html
@@ -26,12 +26,12 @@
                 <span class="heading">用户登录</span>
                 <div class="form-group">
                     <input type="text" class="form-control" id="username" name="username" placeholder="用户名"
-                           value="aa"/>
+                           value="children"/>
                     <i class="fa fa-user"></i>
                 </div>
                 <div class="form-group help">
                     <input type="password" class="form-control" id="password" name="password" placeholder="密　码"
-                           value="1"/>
+                           value="children"/>
                     <i class="fa fa-lock"></i>
                     <a href="#" class="fa fa-question-circle"></a>
                 </div>
@@ -61,7 +61,7 @@
                         <ul class="dropdown-menu " aria-labelledby="dropdownMenu1">
                             <li><a href="/views/regNewUser/reg.html">老人</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="/views/regNewUser/reg.html">子女</a></li>
+                            <li><a href="/views/regNewUser/regChildren.html">子女</a></li>
                         </ul>
                 </div>
                 <button type="submit" class="btn ">登 &nbsp; &nbsp;录</button>
