--- a/src/main/resources/static/views/mainInfoPages/NursingServeInfo.html
+++ b/src/main/resources/static/views/mainInfoPages/NursingServeInfo.html
@@ -2,35 +2,38 @@
     <div class="col-md-6 col-lg-11">
         <div class="panel panel-default">
             <!-- Default panel contents -->
-            <div class="panel-heading">我的预定服务信息</div>
+            <div class="panel-heading">服务信息</div>
             <div class="panel-body">
-
+                <!--Table-->
+                <button  class="btn btn-success " style="margin-bottom: 10px"  ng-click="addServeInfo()" ng-if="parentAuthor.serveinfoAddShow == true">新增 </button>
                 <!--搜索-->
                 <div class="input-group search-bar">
-                    <input type="text" class="form-control form_datetime"ng-model="startTime" placeholder="请选择预约日期" readonly>
+                    <input type="text" class="form-control form_datetime"ng-model="serveType" placeholder="请输入服务类型" >
                     <!--一行-->
                     <span class="input-group-btn">
-                        <button type="button" class="btn btn-default"  ng-click="getMyServeInfoByStartTime()">
+                        <button type="button" class="btn btn-default"  ng-click="getServeInfoByServeType()">
                             <span class="glyphicon glyphicon-search"></span>
                         </button></span>
 
                 </div>
-                <!--Table-->
+
                 <table class="table table-striped table-hover table-bordered text-center">
                     <thead>
                     <tr class="text-primary">
                         <td><STRONG>编号</STRONG></td>
-                        <td><STRONG> 服务名称</STRONG></td>
-                        <td><STRONG>预约类型</STRONG></td>
-                        <td><STRONG>预约时间</STRONG></td>
+                        <td><STRONG> 服务类型</STRONG></td>
+                        <td><STRONG>预约操作</STRONG></td>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="serveInfo in parentUseServeInfoList">
+                    <tr ng-repeat="serveInfo in serveInfoList">
                         <td  class="text " ng-model="serveInfo.id" ng-bind="$index+1"></td>
                         <td ng-model="serveInfo.serverItemInfo">{{serveInfo.serverItemInfo}}</td>
-                        <td ng-model="serveInfo.type">{{serveInfo.type}}</td>
-                        <td ng-model="serveInfo.orderdateTime">{{serveInfo.orderdateTime}}</td>
+
+                        <td>
+                            <button  class="btn btn-success" ng-if="parentAuthor.serveinfoOrderShow==true"  ng-click="orderServe(serveInfo.id)">预约</button>
+                            <button  class="btn  btn-danger"  ng-if="parentAuthor.serveinfoDeleteShow == true " ng-click="deleteServeInfoItem(serveInfo.id)" >删除</button>
+                        </td>
                     </tr>
                     </tbody>
                 </table>
@@ -63,14 +66,4 @@
 
 </div>
 
-<script>
-
-    $(".form_datetime").datepicker({
-        format: "yyyy-mm-dd", //显示日期格式
-        autoclose: true,
-        minView: "month",//只选择到天自动关闭
-        language: 'zh-CN',
-    });
-
-</script>
 
