--- a/src/main/resources/static/views/mainInfoPages/serveInfo.html
+++ b/src/main/resources/static/views/mainInfoPages/serveInfo.html
@@ -6,6 +6,16 @@
             <div class="panel-body">
                 <!--Table-->
                 <button  class="btn btn-success " style="margin-bottom: 10px"  ng-click="addServeInfo()" ng-if="parentAuthor.serveinfoAddShow == true">新增 </button>
+                <!--搜索-->
+                <div class="input-group search-bar">
+                    <input type="text" class="form-control form_datetime"ng-model="serveType" placeholder="请输入服务类型" >
+                    <!--一行-->
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-default"  ng-click="getServeInfoByServeType()">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button></span>
+
+                </div>
 
                 <table class="table table-striped table-hover table-bordered text-center">
                     <thead>
@@ -21,7 +31,7 @@
                         <td ng-model="serveInfo.serverItemInfo">{{serveInfo.serverItemInfo}}</td>
 
                         <td>
-                            <button  class="btn btn-success"  ng-click="orderServe(serveInfo.id)">预约</button>
+                            <button  class="btn btn-success" ng-if="parentAuthor.serveinfoOrderShow==true" ng-click="orderServe(serveInfo.id)">预约</button>
                             <button  class="btn  btn-danger"  ng-if="parentAuthor.serveinfoDeleteShow == true " ng-click="deleteServeInfoItem(serveInfo.id)" >删除</button>
                         </td>
                     </tr>
