--- a/src/main/resources/static/views/regNewUser/regChildren.html
+++ b/src/main/resources/static/views/regNewUser/regChildren.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+
+
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!--[if lt IE 9]>
@@ -16,50 +18,112 @@
     <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body ng-app="actionApp" ng-controller="myRegParentController">
 <div class="container ">
-<div class="row  ">
-    <div class="col-sm-3 col-sm-offset-4 ">
-        <form action="/reg" method="post" th:action="@{/reg}" >
-            <div class="form-group">
-                <label for="userName">用户名</label>
-                <input type="text" class="form-control" id="userName"  name="userName" placeholder="用于登录系统"/>
-            </div>
-            <div class="form-group">
-                <label for="passWord">密码</label>
-                <input type="password" class="form-control" id="passWord"  name="passWord" placeholder="密码"/>
-            </div>
-            <div class="form-group">
-                <label for="generalName">姓名</label>
-                <input type="text" class="form-control" id="generalName" name="generalName" placeholder="真实姓名"/>
-            </div>
-            <div class="form-group">
-                <label for="gender">性别</label>
-                <input type="text" class="form-control" id="gender" name="gender" placeholder="性别">
-            </div>
-            <div class="form-group">
-                <label for="identityCard">身份证</label>
-                <input type="text" class="form-control" id="identityCard" name="identityCard" placeholder="身份证">
-            </div>
-            <div class="form-group">
-                <label for="phoneNum">电话</label>
-                <input type="text" class="form-control" id="phoneNum" name ="phoneNum" placeholder="电话">
-            </div>
-            <div class="form-group">
-                <label for="AddressInfo">地址</label>
-                <input type="text" class="form-control" id="AddressInfo" name="AddressInfo" placeholder="地址">
-            </div>
-            <button type="submit" class="btn btn-default">注册</button>
-            <button type="reset" class="btn btn-default">取消</button>
-        </form>
-    </div>
+    <div class="row  ">
+        <div class="col-sm-3 col-sm-offset-4 ">
+            <form action="/reg" method="post" th:action="@{/reg}" >
+                <div class="form-group">
+                    <label for="userName">用户名</label>
+                    <input type="text" class="form-control" id="userName"  name="userName" ng-model="childrenInfo.userName" placeholder="用于登录系统" required/>
+                </div>
+                <div class="form-group">
+                    <label for="passWord" >密码</label>
+                    <input type="password" class="form-control" id="passWord"  name="passWord" ng-model="childrenInfo.passWord" placeholder="密码" required/>
+                </div>
+                <div class="form-group">
+                    <label for="generalName">姓名</label>
+                    <input type="text" class="form-control" id="generalName" name="generalName" ng-model="childrenInfo.generalName" placeholder="真实姓名" required/>
+                </div>
+                <div class="form-group">
+                    <label for="gender">性别</label>
+                    <!--<input type="text" class="form-control" id="gender" name="gender" ng-model="childrenInfo.gender" placeholder="性别">-->
+                    <select class="form-control"id="gender" name="gender" ng-model="childrenInfo.gender" style="background-color: #F0F0F0;color: #00B4EF" alt="性别" >
+                        <option value="男" ng-selected=true>男</option>
+                        <option value="女">女</option>
+                    </select>
 
-</div>
+                </div>
+
+                <div class="form-group">
+                    <label for="identityCard">身份证</label>
+                    <input type="text" class="form-control" id="identityCard" name="identityCard" ng-model="childrenInfo.identityCard" placeholder="身份证" required>
+                </div>
+                <div class="form-group">
+                    <label for="phoneNum">电话</label>
+                    <input type="text" class="form-control" id="phoneNum" name ="phoneNum" ng-model="childrenInfo.phoneNum" placeholder="电话" required>
+                </div>
+                <div class="form-group">
+                    <label for="AddressInfo">地址</label>
+                    <input type="text" class="form-control" id="addressInfo" name="addressInfo" ng-model="childrenInfo.addressInfo" placeholder="地址" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="parentId">请选择父母信息</label>
+                    <select class="form-control"id="parentId" name="parentId" ng-model="childrenInfo.parentId"    style="background-color: #F0F0F0;color: #00B4EF"  >
+                        <option ng-value="-1" ng-selected=true>请选择老人信息</option>
+                        <option ng-repeat=" parent  in parentList" value="{{parent.parentId}}" >姓名：{{parent.generalName}}
+                            &nbsp; &nbsp;&nbsp;身份证号：{{parent.identityCard}}</option>
+                    </select>
+
+                </div>
+                <button type="button" ng-click="save()" class="btn btn-default">注册</button>
+                <button type="button" ng-click="backHistory()" class="btn btn-default pull-right ">返回</button>
+
+            </form>
+        </div>
+
+    </div>
 
 </div>
 
 
 <script src="../../js/jquery.js" th:src="@{/js/jquery.js}"></script>
 <script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+<script src="../../js/angular1.7.min.js" th:src="@{/js/angular1.7.min.js}"></script>
+<script src="../../js/angularService/ChildrenRegService.js" th:src="@{/js/angularService/ChildrenRegService.js}"></script>
+<script>
+    var app = angular.module("actionApp",['childrenRegService']);
+    app.controller("myRegParentController",function ($scope,$http,saveChildrenRegInfo,$window) {
+
+        $scope.$watch('$viewContentLoaded', function() {
+
+            var promise = saveChildrenRegInfo.getAllParent(); // 同步调用，获得承诺接口
+            promise.then(function(data) {  // 调用承诺API获取数据 .resolve
+                $scope.parentList = data;
+               console.log(   $scope.parentList );
+            }, function(data) {  // 处理错误 .reject
+                console.log(data);
+            });
+        });
+
+        $scope.childrenInfo={
+            userName:"",
+            passWord:"",
+            generalName:'',
+            gender:'男',
+            identityCard:'',
+            phoneNum:'',
+            addressInfo:'',
+            parentId:-1
+
+        };
+
+        $scope.save=(function(){
+
+            console.log($scope.childrenInfo);
+            saveChildrenRegInfo.saveChildrenRegInfoMethod($scope.childrenInfo);
+
+        });
+
+        $scope.backHistory=(function(){
+            $window.history.back(-1);
+        });
+
+    });
+
+</script>
+
+
 </body>
 </html>
