--- a/src/main/resources/static/views/mainInfoPages/NursingServeInfo.html
+++ b/src/main/resources/static/views/mainInfoPages/NursingServeInfo.html
@@ -2,7 +2,7 @@
     <div class="col-md-6 col-lg-11">
         <div class="panel panel-default">
             <!-- Default panel contents -->
-            <div class="panel-heading">服务信息</div>
+            <div class="panel-heading">护理信息</div>
             <div class="panel-body">
                 <!--Table-->
                 <button  class="btn btn-success " style="margin-bottom: 10px"  ng-click="addServeInfo()" ng-if="parentAuthor.serveinfoAddShow == true">新增 </button>
@@ -37,28 +37,28 @@
                     </tr>
                     </tbody>
                 </table>
-                <!--分页-->
-                <nav aria-label="Page navigation text-center" class="text-center">
-                    <nav aria-label="Page navigation text-center" class="text-center">
-                        <ul class="pagination">
-                            <li>
-                                <a href="#" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li>
-                                <a href="#" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </nav>
+                <!--&lt;!&ndash;分页&ndash;&gt;-->
+                <!--<nav aria-label="Page navigation text-center" class="text-center">-->
+                    <!--<nav aria-label="Page navigation text-center" class="text-center">-->
+                        <!--<ul class="pagination">-->
+                            <!--<li>-->
+                                <!--<a href="#" aria-label="Previous">-->
+                                    <!--<span aria-hidden="true">&laquo;</span>-->
+                                <!--</a>-->
+                            <!--</li>-->
+                            <!--<li><a href="#">1</a></li>-->
+                            <!--<li><a href="#">2</a></li>-->
+                            <!--<li><a href="#">3</a></li>-->
+                            <!--<li><a href="#">4</a></li>-->
+                            <!--<li><a href="#">5</a></li>-->
+                            <!--<li>-->
+                                <!--<a href="#" aria-label="Next">-->
+                                    <!--<span aria-hidden="true">&raquo;</span>-->
+                                <!--</a>-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</nav>-->
+                <!--</nav>-->
             </div>
         </div>
     </div>
