--- a/src/main/resources/static/views/mainInfoPages/OrderQueryInfo.html
+++ b/src/main/resources/static/views/mainInfoPages/OrderQueryInfo.html
@@ -32,32 +32,32 @@
                         <td ng-model="serveInfo.serverItemInfo">{{serveInfo.serverItemInfo}}</td>
                         <td ng-model="serveInfo.type">{{serveInfo.type}}</td>
                         <td ng-model="serveInfo.orderdateTime">{{serveInfo.orderdateTime}}</td>
-                        <td><button  class="btn  btn-danger"  ng-click="deleteServeInfoItem(serveInfo.id)" >删除{{serveInfo.id}}</button></td>
+                        <td><button  class="btn  btn-danger"  ng-click="deleteOrderServeInfoItem(serveInfo.id)" >删除{{serveInfo.id}}</button></td>
                     </tr>
                     </tbody>
                 </table>
                 <!--分页-->
-                <nav aria-label="Page navigation text-center" class="text-center">
-                    <nav aria-label="Page navigation text-center" class="text-center">
-                        <ul class="pagination">
-                            <li>
-                                <a href="#" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                            <li><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li>
-                                <a href="#" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </nav>
+                <!--<nav aria-label="Page navigation text-center" class="text-center">-->
+                    <!--<nav aria-label="Page navigation text-center" class="text-center">-->
+                        <!--<ul class="pagination">-->
+                            <!--<li>-->
+                                <!--<a href="#" aria-label="Previous">-->
+                                    <!--<span aria-hidden="true">&laquo;</span>-->
+                                <!--</a>-->
+                            <!--</li>-->
+                            <!--<li><a href="#">1</a></li>-->
+                            <!--<li><a href="#">2</a></li>-->
+                            <!--<li><a href="#">3</a></li>-->
+                            <!--<li><a href="#">4</a></li>-->
+                            <!--<li><a href="#">5</a></li>-->
+                            <!--<li>-->
+                                <!--<a href="#" aria-label="Next">-->
+                                    <!--<span aria-hidden="true">&raquo;</span>-->
+                                <!--</a>-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</nav>-->
+                <!--</nav>-->
             </div>
         </div>
     </div>
