--- a/src/main/resources/static/views/addInfo/addChildrenInfo.html
+++ b/src/main/resources/static/views/addInfo/addChildrenInfo.html
@@ -5,14 +5,30 @@
             <div class="panel-heading">子女信息</div>
             <div class="panel-body">
                 <table class="table table-striped table-hover table-bordered text-center">
-                    <tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==true" >
                         <td>姓名：<input class="text text-primary" ng-model="childrenInfoModal.generalName"
                                       placeholder="请输入姓名" required></td>
                     </tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==false" >
+                        <td>姓名：<input class="text text-primary" ng-model="childrenInfoModal.generalName"
+                                      placeholder="请输入姓名" readonly></td>
+                    </tr>
 
-                    <tr >
+                    <tr  ng-if="parentAuthorInfo.CanEdit==true" >
                         <td>登录名：<input class="text text-primary" ng-model="childrenInfoModal.userName"
                                        placeholder="请输入登录名" required></td>
+                    </tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==false" >
+                        <td>登录名：<input class="text text-primary" ng-model="childrenInfoModal.userName"
+                                       placeholder="请输入登录名" readonly></td>
+                    </tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==true" >
+                        <td>身份证：<input class="text text-primary" ng-model="childrenInfoModal.identityCard"
+                                       placeholder="请输入身份证" required></td>
+                    </tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==false" >
+                        <td>身份证：<input class="text text-primary" ng-model="childrenInfoModal.identityCard"
+                                       placeholder="请输入身份证" readonly></td>
                     </tr>
                     <tr>
                         <td>性别：<input class="text text-primary" ng-model="childrenInfoModal.gender" placeholder="请输入性别"
@@ -22,10 +38,7 @@
                         <td>密码：<input type="password" class="text text-primary" ng-model="childrenInfoModal.passWord"
                                       placeholder="请输入密码" required></td>
                     </tr>
-                    <tr>
-                        <td>身份证：<input class="text text-primary" ng-model="childrenInfoModal.identityCard"
-                                       placeholder="请输入身份证" required></td>
-                    </tr>
+
                     <tr>
                         <td>电话：<input class="text text-primary" ng-model="childrenInfoModal.phoneNum"
                                       placeholder="请输入电话" required></td>
@@ -34,10 +47,10 @@
                         <td>地址：<input class="text text-primary" ng-model="childrenInfoModal.addressInfo"
                                       placeholder="请输入地址" required></td>
                     </tr>
-                    <tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==true" >
 
                      <td>
-                       父母信息:<select  id="parentId"  name="parentId" ng-model="childrenInfoModal.parentId"
+                       父母信息:<select   name="parentId" ng-model="childrenInfoModal.parentId"
                         style="background-color: #F0F0F0;color: #00B4EF">
                         <option ng-repeat=" parent  in parentList" ng-value="{{parent.parentId}}">
                         姓名：{{parent.generalName}}
@@ -46,6 +59,19 @@
                         </select>
 
                      </td>
+                    </tr>
+                    <tr  ng-if="parentAuthorInfo.CanEdit==false" >
+
+                        <td>
+                            父母信息:<select    name="parentId" ng-model="childrenInfoModal.parentId"
+                                          style="background-color: #F0F0F0;color: #00B4EF"  disabled>
+                            <option ng-repeat=" parent  in parentList" ng-value="{{parent.parentId}}" readonly="true">
+                                姓名：{{parent.generalName}}
+                                &nbsp; &nbsp;&nbsp;身份证号：{{parent.identityCard}}
+                            </option>
+                        </select>
+
+                        </td>
                     </tr>
 
             <tr>
