--- a/src/main/resources/static/views/reg/regParentInfo.html
+++ b/src/main/resources/static/views/reg/regParentInfo.html
@@ -14,7 +14,7 @@
                         <td>性别</td>
                         <td>身份证</td>
                         <td>编辑</td>
-                        <td>审核</td>
+                        <td ng-if="parentAuthor.isPass==true">审核</td>
                     </tr>
                     <tr ng-repeat="parentInfo in parentInfoList">
                         <td  class="text " ng-model="parentInfo.parentId" ng-bind="$index+1"></td>
@@ -24,9 +24,9 @@
                         <td ng-model="parentInfo.identityCard">{{parentInfo.identityCard}}</td>
                         <td>
                             <button  class="btn btn-success"  ng-click="editParentInfo(parentInfo)">编辑</button>
-                            <button  class="btn  btn-danger" ng-click="deleteParentInfo(parentInfo.parentId)" >删除</button>
+                            <button  class="btn  btn-danger" ng-if="parentAuthor.CanDelete==true" ng-click="deleteParentInfo(parentInfo.parentId)" >删除</button>
                         </td>
-                        <td>
+                        <td ng-if="parentAuthor.isPass==true">
                             <button  class="btn  btn-danger" ng-if="parentInfo.isAccess==1 " disabled>已审核</button>
                             <button  class="btn  btn-danger" ng-click="isAccess(parentInfo)"  ng-if="parentInfo.isAccess==0 ">审核</button>
                         </td>
