--- a/src/main/resources/static/views/login.html
+++ b/src/main/resources/static/views/login.html
@@ -26,12 +26,12 @@
                 <span class="heading">用户登录</span>
                 <div class="form-group">
                     <input type="text" class="form-control" id="username" name="username" placeholder="用户名"
-                           value="lx"/>
+                           value="admin1"/>
                     <i class="fa fa-user"></i>
                 </div>
                 <div class="form-group help">
                     <input type="password" class="form-control" id="password" name="password" placeholder="密　码"
-                           value="lx"/>
+                           value="admin6"/>
                     <i class="fa fa-lock"></i>
                     <a href="#" class="fa fa-question-circle"></a>
                 </div>
